--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,30 +1,65 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.alosh.anna.coinz">
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+<?xml version="1.0" encoding="utf-8"?><manifest xmlns:android="http://schemas.android.com/apk/res/android"
+package="com.alosh.anna.coinz">
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+<uses-permission android:name="android.permission.INTERNET" />
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+<application
+    android:allowBackup="true"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:roundIcon="@mipmap/ic_launcher_round"
+    android:supportsRtl="true"
+    android:theme="@style/AppTheme">
+
+
+    <activity
+        android:name=".SignupActivity"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        android:theme="@style/AppTheme.NoActionBar">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <meta-data
-            android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
-    </application>
+    </activity>
+
+    <activity
+        android:name=".MainActivity"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme.NoActionBar" />
+
+    <activity
+        android:name=".LoginActivity"
+        android:label="@string/title_activity_login"
+        android:theme="@style/AppTheme.NoActionBar" />
+
+    <activity
+        android:name=".BankActivity"
+        android:label="@string/title_activity_bank"
+        android:theme="@style/AppTheme.NoActionBar" />
+
+    <activity
+        android:name=".WalletActivity"
+        android:label="@string/title_activity_wallet"
+        android:theme="@style/AppTheme.NoActionBar" />
+
+    <activity
+        android:name=".TrophiesActivity"
+        android:label="@string/title_activity_trophies"
+        android:theme="@style/AppTheme.NoActionBar" />
+
+
+    <meta-data
+        android:name="preloaded_fonts"
+        android:resource="@array/preloaded_fonts" />
+
+    <activity
+        android:name="com.alosh.anna.coinz.MoniesPopUp"
+        android:label="@string/title_activity_monies_pop_up"
+        android:theme="@style/AppTheme.NoActionBar"></activity>
+
+</application>
 
 </manifest>
